--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
     implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.9'
     
-
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
